reformmated constitution revisions

--- a/cssc-c.tex
+++ b/cssc-c.tex
@@ -19,8 +19,8 @@
 \usepackage{amssymb}
 \usepackage{graphicx}
 
-\date{Effective 2018-10-23 (Passed at the SGM)}
-\title{Computer Science Students Club Constitution}
+\date{Effective 2022-03-31}
+\title{Computer Science Students' Club Constitution}
 
 %To hide these full page chapter title page things which are just a waste of paper
 \titleformat{\chapter}[display] {\normalfont\bfseries}{}{0pt}{\Large}
@@ -86,7 +86,7 @@
 			\end{enumerate}
 		\subsection{Honorary Life Memberships}
 			The Club may in General Meeting by two-thirds majority of those present and voting confer Honorary Life Membership upon any member who has performed outstanding service to the Club.
-            The Club may in General Meeting, by three-quarters of those present and voting strip and remove Honorary Life Memberships upon any member w
+            The Club may in General Meeting, by three-quarters of those present and voting remove Honorary Life Memberships upon an Honorary Life Memeber.
 		\subsection{Primacy of Ordinary Members}
 		Members other than Ordinary Members shall not:
 		\begin{enumerate}[label=\alph*]
@@ -257,7 +257,7 @@
 				\item Generally carry out the policy of the club
 				\item Coordinate and supervise the work of the Executive Officer Bearers, subject to the authority of the club in general meetings
 				\item See that all Office-Bearers are conversant with the constitution and their respective duties and responsibilities
-				\item Be commander-in-chief of the Air, Land, Naval, Cyber, and Space force
+				\item Be commander-in-chief of the Air, Land, Naval, Cyber, and Space forces of the club.
 			\end{enumerate}
 		\subsection{Vice President}
 			\begin{enumerate}[label=\alph*]
@@ -287,10 +287,9 @@
 			\end{enumerate}
 		\subsection{Marketing Officer}
             \begin{enumerate}[label=\alph*]
-                \item Carry out the activities of organising and managing the club's social media platforms
-                \item To produce and edit marketing material for the club, to be presented to the wider university and/or public audience
-                \item Possess credential access to all relevant social media accounts, at the President's discretion
-                \item Act within the foremost capacity to promote and advertise the club, fully, to all who could be involved with the Computer Science Students Club
+                \item Orangise and manage the club's social media platforms.
+                \item Produce and edit marketing material for the club, to be presented to the wider university and/or public audience.
+                \item Act within the foremost capacity to promote and advertise the club to all who could be involved with the club.
             \end{enumerate}
 		\subsection{First Year, Undergraduate and Post Graduate Representatives}
 			\begin{enumerate}[label=\alph*]
@@ -303,7 +302,7 @@
 				\item assist the committee in the running of the club
 			\end{enumerate}
 pd
-		\subsection{Gender Equity Representatives}
+		\subsection{Gender Equity Representative}
 			\begin{enumerate}[label=\alph*]
 				\item Represent the interests of their respective genders as pursuant to issues such as grants, general running of the club et cetera.
 				\item Ensure that the club follows all rules and restrictions related to equal opportunity as outlined by the Guild and University of Western Australia.
@@ -318,6 +317,10 @@ pd
 				The Policies or Regulations which govern these subcommittees must be made publicly available wherever the elected committee finds best.
 				Creation of, and changes to these Policies or Regulations for ongoing subcommittees must be passed at a general meeting and are subject to all the same validity requirements as changes to this constitution.
 				The subcommittees have their rights granted to them from the elected committee and are subject to their decisions. These decisions may include but are not limited to decisions on membership to the subcommittee, changes in the rights and responsibilities to the subcommittee (within reason, and only until it can be ratified at the next general meeting) and the continuation of the subcommittees duties.
+				Here is an officially recognised list of ongoing subcommittees
+				\begin{enumerate}[label=\arabic*]
+					\item Custodes (Translates to Guardians - Basically our "Door" group)
+				\end{enumerate}
 				\end{enumerate}
 
 	\chapter{Miscellaneous}
@@ -325,7 +328,7 @@ pd
 		    \begin{enumerate}[label=\arabic*]
 			\item 2017 - The constitution was rewritten from scratch by President Anton Savill from a proposed 2012 version and the version that was put together by the 2015 committee when it was found that guild didn't have a copy of our actual constitution.
 			\item 2018 - Modifications to the constitution from 1.0.2.0 to 1.0.5.0 Proposed by President Ki Savill
-			\item 2022 - The constitution was amended to officially recognise the office of Marketing Officer as an executive position, along with other formatting and grammatical changes. - Proposed by Vice-President Jordan Campbell
+			\item 2022 - Modifications to the constitution from 1.0.6.0 to 1.0.9.3 Proposed by Vice-President Jordan Campbell
 			\end{enumerate}
 	    \section{Deposits and Withdrawal of Monies}
 			\begin{enumerate}[label=\arabic*]
