Fix typos and capitalisation errors

--- a/cssc-c.tex
+++ b/cssc-c.tex
@@ -19,6 +19,7 @@
 \usepackage{amssymb}
 \usepackage{graphicx}
 
+% TODO change after changes approved in meeting
 \date{Effective 2022-03-31}
 \title{Computer Science Students' Club Constitution}
 
@@ -86,7 +87,7 @@
 			\end{enumerate}
 		\subsection{Honorary Life Memberships}
 			The Club may in General Meeting by two-thirds majority of those present and voting confer Honorary Life Membership upon any member who has performed outstanding service to the Club.
-            The Club may in General Meeting, by three-quarters of those present and voting remove Honorary Life Memberships upon an Honorary Life Memeber.
+            The Club may in General Meeting, by three-quarters of those present and voting remove Honorary Life Memberships upon an Honorary Life Member.
 		\subsection{Primacy of Ordinary Members}
 		Members other than Ordinary Members shall not:
 		\begin{enumerate}[label=\alph*]
@@ -208,7 +209,7 @@
 			\item Faculty Society Representative\\
 			This position is to be left vacant to be filled by the Computer Science Student representative from the faculty society (At the time of writing that is The University Engineers Club)
 			\item Immediate Past President\\
-			Only the person who held the Elected Office Bearer position of President immediately preceding the commencement of the current President?s term can be appointed Immediate Past President.
+			Only the person who held the Elected Office Bearer position of President immediately preceding the commencement of the current President's term can be appointed Immediate Past President.
 		\end{enumerate}
 	\end{enumerate}
 
@@ -287,7 +288,7 @@
 			\end{enumerate}
 		\subsection{Marketing Officer}
             \begin{enumerate}[label=\alph*]
-                \item Orangise and manage the club's social media platforms.
+                \item Organise and manage the club's social media platforms.
                 \item Produce and edit marketing material for the club, to be presented to the wider university and/or public audience.
                 \item Act within the foremost capacity to promote and advertise the club to all who could be involved with the club.
             \end{enumerate}
@@ -299,9 +300,9 @@
 			\end{enumerate}
 		\subsection{Ordinary Committee Members}
 			\begin{enumerate}[label=\alph*]
-				\item assist the committee in the running of the club
+				\item Assist the committee in the running of the club
 			\end{enumerate}
-pd
+
 		\subsection{Gender Equity Representative}
 			\begin{enumerate}[label=\alph*]
 				\item Represent the interests of their respective genders as pursuant to issues such as grants, general running of the club et cetera.
@@ -329,6 +330,8 @@ pd
 			\item 2017 - The constitution was rewritten from scratch by President Anton Savill from a proposed 2012 version and the version that was put together by the 2015 committee when it was found that guild didn't have a copy of our actual constitution.
 			\item 2018 - Modifications to the constitution from 1.0.2.0 to 1.0.5.0 Proposed by President Ki Savill
 			\item 2022 - Modifications to the constitution from 1.0.6.0 to 1.0.9.3 Proposed by Vice-President Jordan Campbell
+			% TODO update this when finished
+			\item 2025 - Modifications to the constitution from 1.0.9.4 to ... Proposed by Vice-President Rory Cusworth
 			\end{enumerate}
 	    \section{Deposits and Withdrawal of Monies}
 			\begin{enumerate}[label=\arabic*]
@@ -382,7 +385,7 @@ pd
 	\section{Amendments}
 		\begin{enumerate}[label=\alph*]
 			\item Any two financial Ordinary Members of the Club may not less than three days before the day appointed for the next General Meeting submit to the Secretary a notice of motion signed by them proposing an alteration to this Constitution. This shall be posted on notice boards forthwith.
-			\item A public pull request shall be made on which ever version control software the club elects to use (at the time of writing that is git hosted on github) with details about the amendment.
+			\item A public pull request shall be made on which ever version control software the club elects to use (at the time of writing that is git hosted on GitHub) with details about the amendment.
 			\item The motion may then be considered by the Club at its next meeting and amendments that are relevant to the subject matter thereof may be moved without notice.
 			\item The motion of any amendment thereto shall not be deemed adopted unless it receives a two-thirds majority of the members present and voting.
 			\item The motion as adopted with any amendments shall come into force as per guild rules and regulations.
