Update committee meeting notice period

--- a/cssc-c.tex
+++ b/cssc-c.tex
@@ -163,7 +163,7 @@
 	\section{Committee Meetings}
 	\begin{enumerate}[label=\alph*]
 		\item The Committee shall meet as such times and places as the President shall determine
-		\item The Secretary shall cause all members of the Committee to receive 7 days notice before the occurrence of any committee meeting
+		\item The Secretary shall cause all members of the Committee to receive at least 3 days notice before the occurrence of any committee meeting
 		\item The agenda of the meeting shall be created as the first item of business at each committee meeting. \\
 		Any business previously added to the agenda shall take precedence in the meeting.
 		\item The Secretary shall forthwith call a Special Meeting of the Committee upon receiving a written requisition from at least two members thereof; and such Special Meeting shall be held not later than 7 days immediately following the receipt of such requisition. \\
