Modify and add sections related to distribution of club funds

--- a/cssc-c.tex
+++ b/cssc-c.tex
@@ -330,8 +330,7 @@
 			\item 2017 - The constitution was rewritten from scratch by President Anton Savill from a proposed 2012 version and the version that was put together by the 2015 committee when it was found that guild didn't have a copy of our actual constitution.
 			\item 2018 - Modifications to the constitution from 1.0.2.0 to 1.0.5.0 Proposed by President Ki Savill
 			\item 2022 - Modifications to the constitution from 1.0.6.0 to 1.0.9.3 Proposed by Vice-President Jordan Campbell
-			% TODO update this when finished
-			\item 2025 - Modifications to the constitution from 1.0.9.4 to ... Proposed by Vice-President Rory Cusworth
+			\item 2025 - Modifications to the constitution from 1.0.9.4 to 1.1.0.0 Proposed by Vice-President Rory Cusworth
 			\end{enumerate}
 	    \section{Deposits and Withdrawal of Monies}
 			\begin{enumerate}[label=\arabic*]
@@ -344,10 +343,11 @@
 			No payments shall be made on behalf of the club or in the name of the club unless it has been authorised by the Executive Office Bearers.
 		
 		\section{Commercial Exploitation of the Club}
-		\begin{enumerate}[label=\arabic*]
-			\item The property and income of the Club shall be applied solely towards the promotion of the objects of the Club and no part of that property or income may be paid or otherwise distributed, directly or indirectly, to any person or body, except in good faith in the promotion of those objects.
-			\item In addition, no member of the Club shall use any of the resources of the Club for direct financial gain without prior explicit written permission from a majority of the current executive committee.
-		\end{enumerate}
+			The property and income of the Club shall be applied solely towards the promotion of the objects of the Club and no part of that property or income may be paid or otherwise distributed, directly or indirectly, to any person or body, except in good faith as compensation for services rendered or expenses incurred on behalf of the organisation.
+
+		\section{Dissolution of the Club}
+			% Modified from https://www.ato.gov.au/businesses-and-organisations/not-for-profit-organisations/getting-started/what-type-of-nfp-is-your-organisation
+			In the event of the organisation being dissolved, the amount that remains after such dissolution and the satisfaction of all debts and liabilities shall be transferred to the Guild.
 		
 		\section{Patron}
 		    \begin{enumerate}[label=\arabic*]
