Change Facebook to social channels

--- a/cssc-c.tex
+++ b/cssc-c.tex
@@ -121,7 +121,7 @@
 
 	\section{Provisions Governing General Meetings}
 	\begin{enumerate}[label=\alph*]
-		\item The Secretary or President shall cause written notice of any General Meeting together with the agenda therefore to be posted on the Computer Science Students Facebook page and in Guild Publications at least (7) seven days before the date appointed to that meeting
+		\item The Secretary or President shall cause written notice of any General Meeting together with the agenda therefore to be posted on the Computer Science Students social channels and in Guild Publications at least (7) seven days before the date appointed to that meeting
 
 		\item No General Meeting may be held while a Guild General Meeting is in progress, provided that this shall not apply where the written notice of the meeting was given before the written notice of the Guild General Meeting. Any such meeting being conducted in contravention thereof shall disband immediately on the order of a disciplinary officer of the Guild.
 
@@ -149,7 +149,7 @@
 
 	\section{Provisions Governing Elections}
 		\begin{enumerate}[label=\alph*]
-			\item The Secretary or President shall cause written notice of the Annual Elections at least (7) seven days before the opening of nominations to be posted on the Computer Science Students Facebook page and in Guild Publications at least (7) seven days before the opening of nominations.
+			\item The Secretary or President shall cause written notice of the Annual Elections at least (7) seven days before the opening of nominations to be posted on the Computer Science Students social channels and in Guild Publications at least (7) seven days before the opening of nominations.
 			\item At least seven (7) days before the opening of the nomination period, the Secretary shall call for nominations for the offices and Committee of the Club, and shall include the same in the notice of the Annual General Meeting. Nominations shall close at that meeting. The President may approve nominations surplus to that list during the meeting, before the vote.
 			\item No Elections may be held while Guild Elections are in progress, provided that this shall not apply where the written notice of the Elections was given before the written notice of the Guild Elections. Any such elections shall not be considered binding upon the club, and will not satisfy the constitutional requirements for annual elections.
 			\item The quorum of Annual Elections shall consist of five percent of all ordinary members.
