Update section on OCM responsibilities

--- a/cssc-c.tex
+++ b/cssc-c.tex
@@ -285,8 +285,11 @@
                 \item Act within the foremost capacity to promote and advertise the club to all who could be involved with the club.
             \end{enumerate}
 		\subsection{Ordinary Committee Members}
+			Assist the committee in the running of the club, including:
 			\begin{enumerate}[label=\alph*]
-				\item Assist the committee in the running of the club
+				\item Attend committee meetings when available
+				\item Assist Custodes with clubroom responsibilities
+				\item Assist with the running of club events
 			\end{enumerate}
 
 		\subsection{Subcommittees}
