Add Time to President position description

--- a/cssc-c.tex
+++ b/cssc-c.tex
@@ -250,7 +250,7 @@
 				\item Generally carry out the policy of the club
 				\item Coordinate and supervise the work of the Executive Officer Bearers, subject to the authority of the club in general meetings
 				\item See that all Office-Bearers are conversant with the constitution and their respective duties and responsibilities
-				\item Be commander-in-chief of the Air, Land, Naval, Cyber, and Space forces of the club.
+				\item Be commander-in-chief of the Air, Land, Naval, Cyber, Space and Time forces of the club.
 			\end{enumerate}
 		\subsection{Vice President}
 			\begin{enumerate}[label=\alph*]
