--- a/Policies and Regulations/Marketing/marketing.tex
+++ b/Policies and Regulations/Marketing/marketing.tex
@@ -22,7 +22,7 @@
 
 \title{Computer Science Students Club Policy}
 \author{Marketing}
-\date{Draft 04-07-2025}
+\date{Draft 29-01-2026}
 
 
 % To hide these full page chapter title page things which are just a waste of paper
@@ -39,7 +39,7 @@
 
 	\chapter{Description}
 		\section{Purpose}
-		The purpose of the Marketing Subcommittee is to actively promote the club’s events, initiatives, and culture both within the university and externally. Members serve as the creative and communicative voice of the CSSC, ensuring strong engagement with members, potential members, and the broader tech community.
+		The purpose of the Marketing Subcommittee is to actively promote the club's events, initiatives, and culture both within the university and externally. Members serve as the creative and communicative voice of the CSSC, ensuring strong engagement with members, potential members, and the broader tech community.
 
 		\section{Qualifications of Members}
 		Members of the Marketing Subcommittee must:
