--- a/Policies and Regulations/Marketing/marketing.tex
+++ b/Policies and Regulations/Marketing/marketing.tex
@@ -3,8 +3,7 @@
 \usepackage{titlesec} % to hide chapter titles
 \usepackage{enumitem} % to have control over how formatting on enumerated lists
 
-% because it's 2017 and clickable table of contents is needed
-\usepackage{hyperref}
+\usepackage{hyperref} % clickable table of contents
 \hypersetup{
 	colorlinks,
 	citecolor=black,
@@ -19,11 +18,9 @@
 \usepackage{amssymb}
 \usepackage{graphicx}
 
-
 \title{Computer Science Students Club Policy}
-\author{Marketing}
-\date{Draft 29-01-2026}
-
+\author{Marketing Subcommittee}
+\date{02-02-2026}
 
 % To hide these full page chapter title page things which are just a waste of paper
 \titleformat{\chapter}[display] {\normalfont\bfseries}{}{0pt}{\Large}
@@ -38,19 +35,20 @@
 	\newpage
 
 	\chapter{Description}
+		\section{Creation of Subcommittee}
+        This document formally creates and outlines the functions and responsibilities of the Computer Science Students' Club's Marketing Subcommittee. 
+        
 		\section{Purpose}
-		The purpose of the Marketing Subcommittee is to actively promote the club's events, initiatives, and culture both within the university and externally. Members serve as the creative and communicative voice of the CSSC, ensuring strong engagement with members, potential members, and the broader tech community.
+        The purpose of the Marketing Subcommittee is to actively promote the club's events, initiatives, and presence both within the university and externally. Members serve as the creative and communicative voice of the CSSC, ensuring strong engagement with club members, potential club members, and the broader community.
 
 		\section{Qualifications of Members}
 		Members of the Marketing Subcommittee must:
 		\begin{enumerate}[label=\arabic*.]
-			\item Be current student members of the University of Western Australia.
-			\item Be willing to represent the club positively and publicly.
-			\item Be elected at the Annual General Meeting (AGM) or appointed at the discretion of the committee.
-			\item Agree to follow direction from the committee and act within the club's constitution and branding guidelines.
+			\item Be current full privileged members of the Computer Science Students' Club.
+			\item Be willing to actively represent the club positively and publicly.
+			\item Be elected at a General Meeting or appointed at the discretion of the committee.
+			\item Agree to follow directions from the committee and act within the club's constitution and policy guidelines.
 		\end{enumerate}
-
-		The number of Marketing Subcommittee members is flexible and determined by the committee based on yearly club needs.
 
 	\chapter{Responsibilities}
 		\section{Main Responsibilities}
@@ -83,13 +81,13 @@
 		\end{enumerate}
 
 	\chapter{Other Important Notes}
-		\section*{Length of Term}
-		Marketing Subcommittee members will serve from the AGM until the next AGM unless re-elected or removed by the committee.
+		\section{Length of Term}
+		Marketing Subcommittee members will serve until the start of a new semester unless removed by the committee.
 
-		\section*{Removal and Replacement}
+		\section{Removal and Replacement}
 		Members may be removed by a committee vote due to inactivity, misconduct, or misrepresentation. Replacement members may be appointed or elected at the committee's discretion.
 
-		\section*{Acknowledgments}
-		This document is based on the structure and style of the CSSC \textit{Custodes} policy and was adapted in 2025.
+		\section{Subcommittee Size}	
+		The number of Marketing Subcommittee members is flexible and determined by the clubs current committee. The amount of people in the subcommittee is to be revaluated at the beginning of each semester.  
 
 \end{document}
