--- a/Policies and Regulations/Custodes/custodes (Guardians).tex
+++ b/Policies and Regulations/Custodes/custodes (Guardians).tex
@@ -24,7 +24,7 @@
 
 \title{Computer Science Students Club Policy}
 \author{Custodes}
-\date{Draft 2019-07-10}
+\date{19-02-2026}
 
 
 %To hide these full page chapter title page things which are just a waste of paper
@@ -39,109 +39,92 @@
 	\end{small}
 	\newpage
 	\chapter{Description}
-		\large{\textit{Quis custodiet ipsos custodes?}}
-		\section{Purpose}
-			The purpose of this subcommittee is to act as a approachable face for the club and to manage and maintain the clubroom.
-			
-			The members of this subcommittee may also be referred to as: Guardians, Watchmen or Watch people, Gatekeepers, Door members, or any other suitable title.
-			
-			Custos is the singular form of Custodes.
+		\section{Creation of Subcommittee}
+            This document formally creates and outlines the functions and responsibilities of the Computer Science Students' Club's door subcommittee, formally known as Custodes. 
+        
+        \section{Purpose}
+            Members of the subcommittee exist to open and hold the club room in the absence of an executive. Subcommittee members are allowed access to any club room keys. They are also responsible for the management and maintenance of the clubroom in the absence of an executive.   
+    
 		\section{Qualifications of Members}
-			Members of Custodes must:
+			Members of the door subcommittee must:
 			\begin{enumerate}
 				\item Be considered trustworthy by the current committee.
-				\item Be current student members of the University of Western Australia.
-				\item Be willing to accept and carry out all legal directives given to them by committee.
+				\item Be current student's of the University of Western Australia.
+                \item Be fully privileged members of the Computer Science Students' Club. 
+				\item Be willing to accept and carry out all instructions given to them by committee.
+                \item Expectation to be active and present in the club reasonably frequently. 
 			\end{enumerate}
-			Additionally all executive members of the committee are to instantly be considered members of Custodes.
-			
-			The number of Custodes shall not exceed 5 regular members plus the current committee. This full list of Custodes with student names and numbers shall be provided to the CSSE Admin so key access can be managed.
+            
+        \section{Creation and Removal of Members}
+			All executive members of the committee are to immediately be considered members of the door subcommittee. Any fully privileged member of the club may be appointed or removed by the committee during a formal meeting. There are to be no more than 10 members of the subcommittee at a given time, this includes executive members. 
+
+        \section{Term Limits}
+        Once elected, members of the door subcommittee serve until the start of the next university semester unless otherwise removed for any reason by the committee. 
+            
 	\chapter{Responsibilities}
 		\section{Main Responsibilities}
 		\begin{enumerate}
-			\item Custodes are to do everything which may be reasonably expected of them in order to protect the members and property of the club.
+			\item Custodes are expected to protect the members and property of the club within reason. 
 			\item Custodes are responsible for the oversight of all activities in the clubroom while it is under their control.
 			\item Custodes are to assist any person looking to become a member of the club.
-			\item Custodes are expected to attend clubroom cleaning sessions as announced by the committee or give appropriate apologies.
+            \item Custodes are to follow all opening and closing procedures of the room. 
+            \item Custodes are required to keep all keys to the room secure and private. 
+            \item Custodes are expected to be able to handle and track payments within the club. 
 		\end{enumerate}
-		\section{Supplementary Responsibilities}
-			\subsection{Room}
+		\section{Room Policy}
 			\begin{enumerate}
-				\item There may only be people in the clubroom if there is a Custos in the room. This Custos is said to be "holding the room".
-				\item If any Custos is present in the room, the clubroom must be open.
-				\item The room must not be open during hours not previously approved by CSSE admin or the CSSC Committee.
-				\item A Custos may not hold the room open if they are engaged in any activity that significantly reduces their ability to act in accordance with their station.
-				\item If a Custos solely holds the room and intends to leave, they should give as much notice as possible to all members in the room that this is the case and therefore the room will be closing.
-				\item If no other Custos arrives during this time, all members must leave and the departing Custos must close the room before leaving.
-				\item If a new Custos arrives and is able to hold the room open, then it can be assumed this responsibility is passed to this member.
-				\item It is expected that the leaving Custos shall inform the newly arrived Custos that they are now holding the room as a matter of course.
-				\item A Custos may bestow upon a trusted member temporary Custos rights, these rights may not be transferred or bestowed again from the recipient and last for a maximum of 3 hours. - The original Custos is still considered responsible for the state of the room and so should select who they bestow it upon carefully.
+				\item There may only be people in the clubroom if a member of the door subcommittee is present to hold the room. 
+                \item All people must leave the room if there is no appropriate person is present to hold the room. 
+                \item Upon opening the clubroom all procedures must be followed, mainly declaring the room open on relevant channels. 
+                \item When closing the room, all closing procedures must be followed by members of the door subcommittee. This includes cleaning the room, securing the room and declaring the room closed on relevant channels. 
+                \item Individuals banned from the club or are of high-risk to members are not allowed to be present in the room. 
+                \item Club members not on the door subcommittee may be able to temporarily hold the room if permitted by an executive of the club. The room may not be held for longer than two hours by a non door subcommittee member. This temporary custode is not to be given access to a key. 
 			\end{enumerate}
 			
 	\chapter{Rights, Powers and Privileges}
 		\section{Powers given by Committee to fulfill Subcommittee Purpose}
 		
 		\begin{enumerate}
-			\item To assist with their responsibilities under, Custodes are given powers to assist in the safe and secure management of the clubroom.
-			\item A Custos may use their powers whenever and however they see fit, though any use or abuse of Custodes Powers may be subject to review by the committee, and may result in the loss of Custodes status.
-			\item Custodes have the power to expel any member from the clubroom as detailed in the appendices.
+            \item Members of the door subcommittee are allowed access to and are able to hold keys to the club door. Non executive members are not to hold keys for an extent of time which limits members access to the clubroom for an unreasonable amount of time. 
+			\item Individuals on the door subcommittee are allowed the ability to process cash, online and eftpos payments within the clubroom. 
 		\end{enumerate}
 		
 		\section{Additional Powers granted in specific circumstances}
 		\begin{enumerate}
-			\item In the circumstance where there is someone looking to speak to someone from the club, a Custos may take action to address this person as seen appropriate. Any action taken by the Custos must be noted down and sent to the committee
+			\item In the circumstance where there is someone looking to speak to someone from the club, a Custode may take action to address this person as seen appropriate. Any action taken by the Custode must be noted down and sent to the committee
 		\end{enumerate}
 		
-		\section{Items that Custodes should be aware of}
+		\subsection{Temporary Removal of Individuals from the Room}
+		In most cases, offenders should be given a warning before being removed. Members of the door subcommittee may remove someone from the room for any reason at their discretion. In the event that an offender refuses to abide by the removal, UWA Security can be called. This is not a permanent expulsion. 
+
+    \section{Lockbox}
+    \subsection{Usage}
+    When a lockbox is present, any additional clubroom keys will be stored there. All members of the door subcommittee will be given access and are expected to keep the code private. It is expected for subcommittee members to store keys in the lockbox as opposed to on their person at all times. 
+    \subsection{Combination}
+    Only executive members or CSSE building administration are allowed to change the lockbox combination. It is expected the combination be changed after the removal of a member of the door subcommittee or start of a new university semester. 
+    \subsection{Absence}
+    In the absence of the a lockbox, any additional keys not held by the president of the club are to be held at CSSE reception and only approved members are to sign them out. A list of approved members are to be provided to CSSE administration including name, student number and member position. 
+		
+		
+	\chapter{Additional Important Information}
+        \section{Items that Custodes should be aware of}
 		\subsection{UWA Security Contact Details}
 		\begin{itemize}
 			\item Emergency: 6488 2222
 			\item Non-Emergency: 6488 3020
 		\end{itemize}
-		\subsection{Keeping the Room Open}
-		Custodes should endeavour to maintain the clubroom and its contents in an appropriate and usable state.\\
-		Custodes should ensure people do not litter in the clubroom.\\
-		Rubbish bins are provided by the club to assist in keeping the clubroom tidy.\\
-		Large items such as cardboard boxes (including pizza boxes) should not to be put in the bins, and should instead be taken down to the bins directly on leaving the clubroom.\\
-		If the bins get too full, it is the responsibility of Custodes present to ensure they are emptied
-		
-		\subsection{Reasons for Expulsion}
-		In most cases, offenders should be given a warning before being expelled
-		The following is a non-exhaustive list of appropriate reasons for expulsion:
-		\begin{itemize}
-			\item Violent, offensive, or disruptive behaviour
-			\item Danger or damage to members or club or member property
-			\item Habitual littering
-		\end{itemize}
-		In the event that an offender refuses to abide by the expulsion, UWA Security can be called
-		
-		
-	\chapter{Appendices}
-		\section{Length of Term}
-		\subsection{General}
-		The list of Custodes shall, at the committee's discretion, be purged and recreated during the End of Year Annual General Meeting so as to maintain an accurate list of members who are 'trusted' and who currently require access to the clubroom.
-		\subsection{Circumstantial}
-		\begin{enumerate}
-			\item A Custos can, at any time, be removed from the list of Custodes with or without prior notice or reason by the committee.
-			\item A member may appeal such a decision at any Ordinary Committee Meeting.
-		\end{enumerate}
-		
+        \subsection{Payment Information}
+        Know all relevant information to make payments.
+        \subsection{Membership Signup and Validation}
+		Know how to signup new members to the club and verify existing ones.
+        
 		\section{Expulsion}
-		From time to time it may be seen necessary to expel someone from the clubroom for a limited amount of time.
+		It may be seen necessary to permanently expel someone from the clubroom for a limited or extended amount of time. A formal expulsion requires a majority vote by members of the door subcommittee. 
 		\begin{enumerate}
 			\item A person who is expelled is forbidden entry to the clubroom for the duration of the expulsion.
-			\item An expelled person may enter the clubroom with an acceptable reason under the oversight and with the permission of the active Custos.
-			\item An expulsion expires either once the conditions set by the Custos have been met, or at the next Ordinary Committee Meeting, whichever comes sooner.
-			\item The committee is able to revoke this expulsion if they deem the action taken by the Custos to be unjust.
-			\item All expulsions are subject to review at the next Ordinary Committee Meeting, at which the committee will decide what further action to take, if any.
-			\item A Custos is obligated to notify the other Custodes and the committee in a form of electronic communication whenever a person is expelled with details of the situation, exactly what actions were taken and conditions of the expulsion.
-			\item This power is expressly intended to enable Custodes in their above responsibilities, though may also be used to prevent or punish disruption and misbehaviour.
+			\item An expelled person may enter the clubroom with an acceptable reason under the oversight and with the permission of an executive member.
+			\item An expulsion expires either once the conditions set by the committee have been met, or by vote at an Ordinary Committee Meeting.
+			\item Formal documentation of the event is required, including a detailed reason for expulsion. 
 		\end{enumerate}
-		
-		\section{Leader of the Custodes}
-		The Custodes may, at the presidents discretion, elect a "leader". This "leader" has no special powers or status among the Custodes or committee, except for being a figurehead. This figurehead may elect to take the title of "Sam Vimes" if they wish.\\
-		If anyone ever questions the position of the Custodes, i.e. "Quis custodiet ipsos custodes?" or "Who watches the watchmen" etc. Custodes must either answer with "Sam Vimes" or the leaders name. If the leader is asked this question they must answer "I Do" and then must show the member this section of the policy and explain that it's a Discworld reference.
-		
-	\chapter{Acknowledgments}
-		The initial version of this document has liberal amount adapted from the UCC Door Policy (Version 1.0, 2015-03-17)  - the current version can be found here: https://www.ucc.asn.au/infobase/policies/door.ucc
+
 \end{document}
